# auth_service

./: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 3c4a4b9a24aa_create_user_table.py  566f0ccd369b_create_user_table.py  6b190f5a5350_create_user_table.py
app/: __init__.py
app/configuration/: __init__.py  events.py  server.py
app/internal/pkg/: __init__.py
app/internal/pkg/dependencies/: __init__.py  dependencies.py
app/internal/pkg/jwt/: __init__.py  jwt_handler.py
app/internal/pkg/middlewares/: __init__.py  handle_http_exceptions.py  role_admin_verification.py  token_based_verification.py  verification_email.py
app/internal/pkg/password/: password.py
app/internal/pkg/verification/: verification.py
app/internal/repository/: __init__.py  repository.py
app/internal/repository/v1/: __init__.py
app/internal/routes/: __init__.py
app/internal/routes/v1/: __init__.py  auth.py  user.py
app/internal/services/: __init__.py
app/internal/services/v1/: __init__.py  auth.py  user.py
app/pkg/async_helpers/: async_multithread_lock.py
app/pkg/clients/: __init__.py  base_clients.py
app/pkg/clients/v1/: __init__.py  notification_service.py
app/pkg/connectors/: __init__.py  connector.py  http_request.py  rabbitmq.py  resources.py
app/pkg/connectors/postgresql/: __init__.py  resource.py
app/pkg/connectors/rabbitmq/: rabbitmq.py  resource.py
app/pkg/handlers/: __init__.py  exception.py  recursive_attr.py
app/pkg/logger/: __init__.py  logger.py
app/pkg/models/: __init__.py
app/pkg/models/base/: enum.py  (+6 more)
app/pkg/settings/: __init__.py  settings.py
docker/app/: Dockerfile
docker/migrations/: Dockerfile
scripts/: migrate.py
(+46 files in other folders)
